--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -5,24 +5,11 @@
     <div class="prefix_2">
         <div class="box_three_top"></div>
         <div class="box_three_middle">
-            {# {% if request.COOKIES.sessionid.0 in '01234567' %} #}
-            {#     In the A Group ({{request.COOKIES.sessionid.0}}) #}
-            {# {% else %} #}
-            {#     In the B Group ({{request.COOKIES.sessionid.0}}) #}
-            {# {% endif %} #}
-
-            {# <h1 class="center">Join the Coal Challenge</h1> #}
-            <p class="center">
-            <object width="675" height="404"><param name="movie" value="https://repowerathome.com/youtube/v/kPm9wMhIcJs&amp;hl=en_US&amp;fs=1?rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="https://repowerathome.com/youtube/v/kPm9wMhIcJs&amp;hl=en_US&amp;fs=1?rel=0" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="675" height="404"></embed></object>
-            
-            {# <object width="480" height="295"><param name="movie" value="https://repowerathome.com/youtube/v/cbDNupks3Kg&amp;hl=en_US&amp;fs=1?rel=0&amp;hd=1"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="https://repowerathome.com/youtube/v/cbDNupks3Kg&amp;hl=en_US&amp;fs=1?rel=0&amp;hd=1" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="480" height="295"></embed></object> #}
-            </p>
-            {# <br class="clear" /> #}
-            <div style="width:360px; float:left; padding-right:15px; margin-right:15px; border-right:1px solid #ccc">
+            <div id="registration_left_col">
                 <h1>Join the Challenge</h1>
-                {# <p> #}
-                {# <object width="360" height="227"><param name="movie" value="https://repowerathome.com/youtube/v/cbDNupks3Kg&amp;hl=en_US&amp;fs=1?rel=0&amp;hd=1"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="https://repowerathome.com/youtube/v/cbDNupks3Kg&amp;hl=en_US&amp;fs=1?rel=0&amp;hd=1" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="360" height="227"></embed></object> #}
-                {# </p> #}
+                <p>
+                    <object width="360" height="227"><param name="movie" value="http://www.youtube.com/v/kPm9wMhIcJs&amp;hl=en_US&amp;fs=1?rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/kPm9wMhIcJs&amp;hl=en_US&amp;fs=1?rel=0" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="360" height="227"></embed></object>
+                </p>
                 <h3>Solve the climate crisis from the ground up.</h3>
                 <p>
                     Join the Repower at Home Coal Challenge today and see the many simple ways to conserve energy in
@@ -43,10 +30,7 @@
                     </div>
                 </p>
             </div>
-            <div style="width:270px; float:left;">
-                {# <p> #}
-                {#     <object width="308" height="198"><param name="movie" value="https://repowerathome.com/youtube/v/cbDNupks3Kg&amp;hl=en_US&amp;fs=1?rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="https://repowerathome.com/youtube/v/cbDNupks3Kg&amp;hl=en_US&amp;fs=1?rel=0" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="308" height="198"></embed></object> #}
-                {# </p> #}
+            <div id="registration_right_col">
                 <form action="{% url register %}" method="post" id="registration_form" autocomplete="off">
                     <div class="form_row overset form_row_float form_row_float_left_field">
                         <label for="id_first_name">First name</label>
