Making some changes to the registration email.

--- a/templates/rah/registration_email.html
+++ b/templates/rah/registration_email.html
@@ -1,10 +1,12 @@
 <p>
-    Welcome {{ user.first_name }}!<br />
-    Congratulations on your new Repower at Home account. You’ve taken your first step on the path<br /> 
+    Welcome {{ user.first_name }}!
+</p>
+<p>
+    Congratulations on your new Repower at Home account. You’ve taken your first step on the path
     towards a smarter home and a cleaner world.
 </p>
 <p>
-    At Repower at Home, cool cats like you are getting together to save energy, save money,<br /> 
+    At Repower at Home, cool cats like you are getting together to save energy, save money, 
     and save the world.
 </p>
 <p>
@@ -20,8 +22,8 @@
             <a href="http://{{ domain }}{% url group_create %}">Start a team</a> for your 
             neighborhood, school, church, or knitting club. Then, organize your team to take 
             action together.</li> 
-        <li>Spread the word! <a href="http://{{ domain }}{% url index %}">Tweet it out</a>, 
-            <a href="http://{{ domain }}{% url index %}">invite friends</a>, send some smoke 
+        <li>Spread the word! <a href="http://twitter.com/home?status=I'm%20saving%20money%20and%20having%20fun%20with%20%40repowerathome.%20Check%20out%20http%3A%2F%2Frepowerathome.com%2F">Tweet it out</a>, 
+            <a href="http://www.facebook.com/sharer.php?u=http%3A%2F%2Frepowerathome.com%2F">share on Facebook</a>, send some smoke 
             signals, whatever. Let everyone know about all the good you’re doing, and how they 
             can join in on the fun.</li>
 </p>
