--- a/static/css/style.css
+++ b/static/css/style.css
@@ -143,16 +143,16 @@ a.button:hover { color: white; }
 /* ---------------------------------------------------------------------------------------------------------------------
 Messages Messages Messages Messages Messages Messages Messages Messages Messages Messages Messages Messages Messages 
 --------------------------------------------------------------------------------------------------------------------- */
-#message_box { text-align: center; margin-left: auto; margin-right: auto; width:1000px; position: fixed; top:0; left: 50%; margin-left: -500px; }
-#message_box ul { list-style-type: none; }
+#message_box { text-align: center; width:1000px; position: fixed; top:0; left:50%; margin-left:-500px; }
+#message_box ul { list-style-type: none; margin:0;}
 #message_box .dismiss { float: right; margin-right: 6px; font-size: 12px; }
 #message_box .info, 
 #message_box .success, 
 #message_box .warning, 
 #message_box .error, 
-#message_box .validation { border: 2px solid; padding:10px; border-top:0px; opacity: .9; filter:Alpha(Opacity=90);}
+#message_box .validation { border: 2px solid; padding:12px; border-top:0px; opacity: .95; filter:Alpha(Opacity=95); font-weight:bold;}
 .info    { color: #00529B; background-color: #BDE5F8; }
-.success { color: #4F8A10; background-color: #DFF2BF; }
+.success {  background-color: #eee; border-color: #C1C1C1 !important;}
 .warning { color: #9F6000; background-color: #FEEFB3; }
 .error   { color: #D8000C; background-color: #FFBABA; }
 .ga_track_pageview {display:none;}
@@ -553,6 +553,16 @@ Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc 
 .post_body li,
 #flat_page li{ list-style: disc; }
 ul.plain_list {margin-left: 0px; padding-left: 0px; list-style: none;}
+.shadow {
+    -webkit-box-shadow: 0px 3px 6px #333;
+    -moz-box-shadow: 0px 3px 6px #333;
+	-webkit-box-shadow: 0px 3px 6px #333;
+	box-shadow: 0px 3px 6px #333;
+	/* For IE 8 */
+	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=3, Direction=0, Color='#333333')";
+	/* For IE 5.5 - 7 */
+	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=3, Direction=0, Color='#333333');
+}
 
 /* spite icons */
 .icon_gt {background: url(../images/theme/0000000004_sprite_minor_col.png) -20px -303px; width:5px; height:10px; display:inline-block;}
