--- a/templates/_messages.html
+++ b/templates/_messages.html
@@ -1,5 +1,5 @@
 {% if messages %}
-    <ul class="messages">
+    <ul class="plain_list shadow">
         {% for message in messages %}
             <li class="messages {{ message.tags }}">
                 {% if "ga_track_pageview" in message.tags %}
