--- a/templates/rah/registration_email.html
+++ b/templates/rah/registration_email.html
@@ -17,7 +17,7 @@
     <ul>
         <li>Jump in and complete this month’s <a href="http://{{ domain }}{% url index %}">featured action</a>.</li>
         <li>Get plugged in to your local energy efficiency scene by <a href="http://{{ domain }}{% url group_list %}">
-            finding a team</a>.</li> 
+            finding a team to join</a>.</li> 
         <li>Are you the first to arrive at the party? 
             <a href="http://{{ domain }}{% url group_create %}">Start a team</a> for your 
             neighborhood, school, church, or knitting club. Then, organize your team to take 
