Making changes to events page

--- a/events/templates/events/show.html
+++ b/events/templates/events/show.html
@@ -10,31 +10,68 @@
     <div class="box_two_middle">
         <h1>Host an energy meeting</h1>
         <p>
-            Energy meetings let you introduce your friends, coworkers, and neighbors to the 
-            benefits of saving energy. These fun events teach participants about key 
-            energy actions and get them excited about saving energy as a team. 
+            Energy meetings bring together people who are already part of a community, like parents in a PTA,
+            parishioners in a church, or people in a book club. <b>The meetings bring the idea of saving energy to this
+            community</b>, and get members excited about taking action to reduce their use.
         </p>
+
+        <h3>How do I host?</h3>
         <p>
-            Repower at Home will provide all the materials you need. 
-            <b>You don’t have to be an expert in energy efficiency to host an event.</b> 
+            Repower at Home’s web tools make it easy to invite guests, record RSVPs and complete follow-up. Get started
+            by <a href="http://rahstatic.s3.amazonaws.com/meeting_materials/Energy_Meeting_Guide.pdf">downloading the 
+            host guide</a>. After reading through the guide, create your event and start inviting guests.
         </p>
-        <h3>Who would I invite?</h3>
+        <p class="center"><a class="button" href="{% url event-create %}" style="font-size:18px">Create an Event</a></p>
+        
+        <h3>What happens at a meeting?</h3>
         <p>
-            You’re already plugged into many networks: your office, your children’s school, 
-            your bowling team, and so on. Who isn’t interested in cleaner air and better homes? 
-            Many hosts are unsure in the beginning, but find it easy to develop a guest list of 
-            well over thirty people! The host materials will help you think through the process 
-            and develop a guest list. 
+            The meeting introduces guests to <b>four actions</b> almost anyone can do. Guests <b>make commitments</b> to
+            take these actions, and <b>brainstorm next steps</b> they can take together to get even more people
+            involved.
         </p>
-        <p><a class="button" href="{% url event-create %}">Create an Event</a></p>
-        {% if events %}
-            <h2>Upcoming Events</h2>
-            {% include "events/_event_nugget_list.html" %}
-        {% endif %}
+
+        <h3>Who hosts meetings?</h3>
+        <p>
+            <b>Anyone, from engineers to English teachers, can host a meeting</b>. You don’t need to be an energy
+            efficiency expert to host — in fact, you don’t need to have any background in the topic at all. The
+            materials will give you all the information you need to run an event and share your enthusiasm with your
+            community.
+        </p>
+        <object width="432" height="268">
+            <param name="movie" value="http://www.youtube.com/v/gcK06I0Jd9o&amp;hl=en_US&amp;fs=1?rel=0"></param>
+            <param name="allowFullScreen" value="true"></param>
+            <param name="allowscriptaccess" value="always"></param>
+            <embed src="http://www.youtube.com/v/gcK06I0Jd9o&amp;hl=en_US&amp;fs=1?rel=0"
+                   type="application/x-shockwave-flash" 
+                   allowscriptaccess="always" 
+                   allowfullscreen="true" 
+                   width="432" 
+                   height="268"></embed>
+        </object>
+        <p>
+            Listen to Elena talk about why she decided to host an energy meeting
+        </p>
+
+        <h3>What if I need help?</h3>
+        <p>
+            A field organizer will support you as you run your meeting. Use the contact links on the right of this page
+            to get in touch with a field organizer.
+        </p>
+        
     </div>
     <div class="box_two_bottom"></div>
 </div>
 <div class="grid_3 omega">
+    <div class="box_one_top"></div>
+    <div class="box_one_middle">
+        <h3>Need some help?</h3>
+        <p>
+            If you would like to talk to a real person about hosting an energy meeting you can <a
+            href="mailto:field@repowerathome.com?subject=Hosting%20an%20energy%20meeting">send us an email</a> or we can
+            <a href="{% url house_party %}" id='house_party_link' rel="nofollow">give you a call</a>. 
+        </p>
+    </div>
+    <div class="box_one_bottom"></div>
     {% if user.is_authenticated and my_events %}
     <div class="box_one_top"></div>
     <div class="box_one_middle">
@@ -45,16 +82,14 @@
     </div>
     <div class="box_one_bottom"></div>
     {% endif %}
+    {% if events %}
     <div class="box_one_top"></div>
     <div class="box_one_middle">
-        <h3>Need some help?</h3>
-        <p>
-            If you would like to talk to a real person about hosting an energy meeting you can 
-            <a href="mailto:field@repowerathome.com?subject=Hosting%20an%20energy%20meeting">send us an email</a> or we can 
-            <a href="{% url house_party %}" id='house_party_link' rel="nofollow">give you a call</a>. 
-        </p>
+        <h3>Upcoming Events</h3>
+        {% include "events/_event_nugget_list.html" %}
     </div>
     <div class="box_one_bottom"></div>
+    {% endif %}
 </div>
 
 {% include "rah/_house_party_dialog.html" %}
