--- a/templates/invite/events/invite.html
+++ b/templates/invite/events/invite.html
@@ -1,6 +1,8 @@
 <p>
     Hi,<br />
-    {{ from_user.get_full_name }} wants you to attend a Repower at Home {{ invite.content_object.event_type }} in {{ invite.content_object.location }}.
+    {{ from_user.get_full_name }} wants you to attend a Repower at Home {{ invite.content_object.event_type }} <br />
+    in {{ invite.content_object.location }} on {{ invite.content_object.when|date:"LONG_DATE_FORMAT" }} at 
+    {{ invite.content_object.start|time }}.
 </p>
 <p>
     <a href="http://{{ domain }}{% url event-invite invite.content_object.id invite.token %}">
