--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -32,6 +32,11 @@
                     <em>Posted by {% safe_user_link post.author %} on {{ post.publish|date }}</em>
                 </p>
                 <div class="post_body">{{ post.body|safe }}</div>
+                <div>
+                    <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Frepowerathome.com{{ object.get_absolute_url|urlencode }}&amp;layout=standard&amp;show_faces=false&amp;width=189&amp;action=like&amp;font=arial&amp;colorscheme=light&amp;height=35" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:189px; height:35px;" allowTransparency="true"></iframe>
+                    <br />
+                    <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="repowerathome">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+                </div>
             </div>
         {% endwith %}
     </div>
