--- a/groups/templates/groups/group_detail.html
+++ b/groups/templates/groups/group_detail.html
@@ -2,7 +2,6 @@
 {% load record %}
 {% load invites %}
 {% load dated_static %}
-{% load thumbnail %}
 
 {% block title %}{{group.name}}{% endblock %}
 {% block extrahead %}
@@ -57,7 +56,7 @@
                     |
                 {% endif %}
                 {% if discs %}
-                    <a href="{% url group_disc_list group.slug %}">Archive</a>    
+                    <a href="{% url group_disc_list group.slug %}">Archive</a>
                 {% endif %}
             </div>            
             {% if discs %}
@@ -89,11 +88,11 @@
 <div class="grid_3 omega">
     <div class="box_one_top"></div>
     <div class="box_one_middle">
-        <img src="{% thumbnail group.safe_image 189x157 crop='smart' %}" alt="group image" height="157" width="189" />
+        <img src="{{ MEDIA_URL }}{{ group.image.thumbnail_189x157_detail }}" alt="group image" height="157" width="189" />
         <div>{{ group.description|linebreaks }}</div>
         <p>
             Team points: {{ group.total_points }}<br />
-            Total members: {{ group.total_members }}</br />
+            Total members: {{ group.total_members }}<br />
         </p>
         <p>
             {% if is_manager %}
