added a SmartCrop processor based off of easy_thumbnails processor

--- a/groups/templates/groups/_group_nugget_list.html
+++ b/groups/templates/groups/_group_nugget_list.html
@@ -3,7 +3,7 @@
     {% for group in groups %}
         <li>
             <a href="{{ group.get_absolute_url }}" class="group_list_thumb">
-                <img src="{{ MEDIA_URL }}{{ group.image.thumbnail_38x45_detail }}" alt="group image" height="38" width="45" />
+                <img src="{{ MEDIA_URL }}{{ group.image.thumbnail_45x38smartcrop }}" alt="group image" height="38" width="45" />
             </a>
             <div>
                 <a href="{{ group.get_absolute_url }}">{{ group.name }}</a>
