Updating goal to 7 million

--- a/templates/rah/home_logged_out.html
+++ b/templates/rah/home_logged_out.html
@@ -8,7 +8,7 @@
         <div class="blue"><b>The October 10th</b></div>
         <h1>Coal Challenge</h1>
         <p>
-            By October 10th, we can take action to keep <br/><b>1 million pounds</b> of dirty coal from polluting our air and our communities.
+            By October 10th, we can take action to keep <br/><strike>1 million pounds</strike> <b>7 million pounds</b> of dirty coal from polluting our air and our communities.
         </p>
         <h3>How it works</h3>
         <p>
