fixed a bug with loading the event invite page if the user viewing the page is also a host. (in this scenario the event details would get loaded twice because we are using jquery ui ajax tabs)

--- a/events/templates/events/_manager_links.html
+++ b/events/templates/events/_manager_links.html
@@ -1,6 +1,6 @@
 <ul id="event_manager_nav">
     {% url event-detail event.id as link %}
-    <li><a href="{% if link == request.path %}#{% else %}{{ link }}{% endif %}">Details</a></li>
+    <li><a href="{% if link == request.path or "invite" in request.path %}#{% else %}{{ link }}{% endif %}">Details</a></li>
     {% url event-guests event.id as link %}
     <li><a href="{% if link == request.path %}#{% else %}{{ link }}{% endif %}">Guest List</a></li>
     {% url event-commitments event.id as link %}
