pimping out 500 page and fixing title on maintenance page

--- a/templates/500.html
+++ b/templates/500.html
@@ -1,11 +1,122 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-  <head>
-    <title>Don't Panic! </title>
-  </head>
-  <body>
-      <h1>Whuh Oh</h1>
-      <p>Sorry, but the requested page is unavailable due to a
-      server hiccup.</p>
-  </body>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:og="http://opengraphprotocol.org/schema/"
+      xmlns:fb="http://www.facebook.com/2008/fbml" lang="en" xml:lang="en">
+    <head>
+        
+        <title>Don't Panic | Repower at Home</title>
+        <meta name="google-site-verification" content="LKUJZqwKMnEGjg_dQNKL-2eLLK3yvftU0RKv7SuymGQ" />
+        <meta name="msvalidate.01" content="DC928E84A1569AF4933A7DB431C08DB4" />
+        <meta name="y_key" content="9d9c6c76735e5a92"/>
+        <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
+        <meta http-equiv="content-language" content="en-us" />
+        <meta name="geo.position" content="38.896231;-77.024158" />
+        <meta name="geo.country" content="US"/>
+        <meta name="geo.region" content="US-DC"/>
+        <meta name="geo.placename" content="Alliance for Climate Protection"/>
+        <meta name="ICBM" content="38.896231, -77.024158"/>
+        <meta property="og:site_name" content="Repower at Home"/>
+        <meta name="keywords" content="energy efficiency, home energy, climate change, repower at home, alliance for climage protection" />
+        <meta name="description" content="We can take action to keep millions of pounds of dirty coal from polluting our communities. Every point you earn means one less pound of coal needs to be burned." />
+        <meta name="DC.title" content="Repower at Home" />
+        <meta name="DC.creator" content="Alliance for Climate Protection" />
+        <meta name="DC.subject" content="energy efficiency; home energy; climate change; repower at home; alliance for climage protection" />
+        <meta name="DC.description" content="We can take action to keep millions of pounds of dirty coal from polluting our communities. Every point you earn means one less pound of coal needs to be burned." />
+        <meta name="DC.format" content="text/html; charset=utf-8" />
+        <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/" />
+        <link rel="alternate" type="application/atom+xml"  href="/blog/feed/" title="Repower at Home Blog" />
+        <link rel="shortcut icon" href="http://prod.static.repowerathome.com/images/theme/favicon.ico"/>
+        <link rel="stylesheet" href="http://prod.static.repowerathome.com/css/style_min.css" type="text/css" media="screen" charset="utf-8"/>
+        <style>
+            h1 { visibility: visible; }
+        </style>
+    </head>
+    <body>
+        <div id="header_container">
+            <div id="header_bg">
+                <div id="header" class="container_12">
+                    <a href="http://repowerathome.com/" title="Repower America" id="header_logo">
+                        <img src="http://prod.static.repowerathome.com/images/theme/logo.png" alt="Repower at Home logo" width="259" height="38"/>
+                    </a>
+                    <form action="http://repowerathome.com/search" id="cse_search_box_form">
+                        <div class="overset">
+                            <input type="hidden" name="cx" value="018322562804099680750:4l5wfmovb4q" />
+                            <input type="hidden" name="cof" value="FORID:11" />
+                            <input type="hidden" name="ie" value="UTF-8" />
+                            <span class="">
+                                <label class="hidden" for="cse_search_box">Search</label>
+                                <input type="text" name="q" size="31" id="cse_search_box"/>
+                            </span>
+                            <input type="submit" name="sa" value="Go" id="cse_search_box_submit"/>
+                        </div>
+                    </form>
+                    <div id="nav">
+                        <a href="http://repowerathome.com/" id="nav_home">Home</a>
+                        <a href="http://repowerathome.com/actions/" id="nav_actions" >Actions</a>
+                        <a href="http://repowerathome.com/teams/" id="nav_teams">Teams</a>
+                        <a href="http://repowerathome.com/events/" id="nav_events">Events</a>
+                        <a href="http://repowerathome.com/blog/" id="nav_blog">Blog</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="content_container">
+            <div id="content_bg">
+                <div id="content">
+                    <div class="container_12">
+                            <div class="grid_9 omega alpha prefix_3">
+                                <div id="breadcrumbs"></div>
+                                <div class="box_two_top"></div>
+                                <div class="box_two_middle">
+                                    <h1>Whuh Oh!</h1>
+                                    <p>
+                                        Sorry, but the requested page is unavailable due to a server hiccup. I just 
+                                        notified the dev team and I'm sure they're on top of it.
+                                    </p>
+                                    <p>
+                                        Maybe give it another shot. If that doesn't work, try again later.
+                                    </p>
+                                </div>
+                                <div class="box_two_bottom"></div>
+                            </div>
+                        <div class="clear"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="footer_container">
+            <div id="footer">
+                <p class="smaller" id="footer_copy">
+                    <a href="http://www.facebook.com/pages/Repower-at-Home/135501849796509">
+                        <img src="http://prod.static.repowerathome.com/images/theme/social_icons/24/facebook.png" alt="Facebook icon"
+                             title="Find us on Facebook" width="24" height="24"/>
+                    </a>
+                    <a href="http://twitter.com/repowerathome">
+                        <img src="http://prod.static.repowerathome.com/images/theme/social_icons/24/twitter.png" alt="Twitter icon"
+                             title="Follow us on Twitter" width="24" height="24"/>
+                    </a>
+                    <a href="http://www.youtube.com/repowerhome">
+                        <img src="http://prod.static.repowerathome.com/images/theme/social_icons/24/youtube.png" alt="YouTube icon"
+                             title="Watch us on YouTube" width="24" height="24"/>
+                    </a>
+                    <a href="http://repowerathome.com/blog/feed/">
+                        <img src="http://prod.static.repowerathome.com/images/theme/social_icons/24/feed.png" alt="Feed icon"
+                             title="Subscribe to our blog" width="24" height="24"/>
+                    </a>
+                    <br/>
+                    <a href="http://repowerathome.com/feedback/" class="feedback_link" rel="nofollow">Feedback</a> |
+                    <a href="http://repowerathome.com/terms/" rel="nofollow">Terms of Use</a> |
+                    <a href="http://repowerathome.com/privacy/" rel="nofollow">Privacy Policy</a> |
+                    <a href="http://repowerathome.com/about/">About Us</a>
+                    <br/>
+                    Copyright &copy; <a href="http://www.climateprotect.org/">The Alliance for Climate Protection</a>
+                    2010. All Rights Reserved.
+                </p>
+            </div>
+        </div>
+        <div id="feedback_dialog"></div>
+        <div id="message_box">
+        </div>
+        <div id="fb-root"></div>
+    </body>
 </html>
