Updating user counts to only reflect trendsetters

--- a/templates/rah/home_logged_in.html
+++ b/templates/rah/home_logged_in.html
@@ -22,7 +22,7 @@
            
     </div>
     <div id="home_page_numbers">
-        <div>{{total_people}} people</div>
+        <div>{{total_people}} trendsetters</div>
         have taken
         <div>{{total_actions}} actions</div>
         to keep
