--- a/templates/rah/home_logged_out.html
+++ b/templates/rah/home_logged_out.html
@@ -20,7 +20,7 @@
         </p>
     </div>
     <div id="home_page_numbers">
-        <div>{{total_people}} people</div>
+        <div>{{total_people}} trendsetters</div>
         have taken
         <div>{{total_actions}} actions</div>
         to keep
