--- a/events/templates/events/_guests.html
+++ b/events/templates/events/_guests.html
@@ -1,5 +1,5 @@
 <a id="edit_event_link" class="button" href="{% url event-edit event.id %}">Edit Event</a>
-<h3>Total Guests: {{ event.confirmed_guests }}</h3>
+<h3>Total Guests: {{ event.confirmed_guests.count }}</h3>
 <h3>Outstanding Invitations: {{ event.outstanding_invitations }}</h3>
 <form id="guest_edit_form" action="" method="post">
     {% for key,error in form.errors.items %}
