Updating share on facebook text

--- a/records/templates/records/_ask_to_share.html
+++ b/records/templates/records/_ask_to_share.html
@@ -6,8 +6,8 @@
         <img src="{% dated_static 'images/theme/we_fb.jpg' %}" width="218" height="80"/>
     </div>
     <p>
-        Share your actions with your friends on Facebook! Repower at Home can publish updates directly to you facebook
-        stream.
+        Like peas and carrots, Facebook and Repower at Home go together. Linking your account to Facebook helps you
+        share your achievements and inspire your friends to become part of the movement.
     </p>
     {% for error in form.social_network.errors %}
         <label class="error" for="{{ field.auto_id }}">{{ error|escape }}</label>
